<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="playlist">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="temaBlack">Темная тема</string>
    <string name="send">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="accept">Пользовательское соглашение</string>
    <string name="searchText">Поиск</string>
    <string name="sendLink">Ссылка на курс по Андроид-разработке в Практикуме Яндекс: https://practicum.yandex/android-course</string>
    <string name="sendAcross">Поделиться через</string>
    <string name="writeSupport">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="writeSupport2">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email">vashehobby@yandex.ru</string>
    <string name="send_email">Отправка письма</string>
    <string name="errorLetter">Не найдено приложений для отправки писем</string>
    <string name="agreement">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="input_hint">Поиск</string>


    <string name="noFind">Ничего не нашлось</string>
    <string name="noConnection">Проблемы со связью</string>
    <string name="loadFail">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="youSearch">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>

    <string name="textNameSongHintAP">Название</string>
    <!--  <string name="textNameSongHintAP">Yesterday (Remastered 2009)</string> -->
    <string name="textNameArtistHintAP">Группа</string>
    <string name="textTimeHintAP">0:30</string>
    <string name="textDurationHintAP">5:35</string>
    <string name="textAlbumHintAP">Альбом</string>

    <!-- <string name="textAlbumHintAP">Yesterday (Remastered 2009)</string> -->

    <string name="textYearHintAP">1965</string>
    <string name="textGenreHintAP">Жанр</string>
    <string name="textCountryHintAP">Страна</string>

    <string name="textDurationAP">Длительность</string>
    <string name="textAlbumAP">Альбом</string>
    <string name="textYearAP">Год</string>
    <string name="textGenreAP">Жанр</string>
    <string name="textCountryAP">Страна</string>
</resources>