<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/backgroundSetting"
    >

    <LinearLayout
        android:id="@+id/buttonContainer"
        style="@style/linearLayoutSettings"

        android:orientation="vertical"

         >

        <!-- Кнопка - Настройки-->


        <LinearLayout
            android:id="@+id/btn_settings"
            style="@style/linearLayoutSettings"

            android:orientation="horizontal"
            >

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dir3"
                app:tint="@color/iconSetting"
                android:layout_gravity="center_vertical"
                android:gravity="start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/sizeTopTextPlay"
                android:paddingBottom="@dimen/sizeBotTextPlay"
                android:paddingStart="@dimen/sizeRightSetting"

                android:text="@string/setting"
                android:textSize="@dimen/fontSet2"
                android:textColor="@color/textSetting"
                android:textAllCaps="false"
                android:fontFamily="@font/ys_text_medium"/>


        </LinearLayout>

        <!-- Кнопка Зеленая-2-->
        <LinearLayout
            android:id="@+id/switch_theme"
            style="@style/buttonSettings"

            android:layout_marginTop="@dimen/dimBotSet2"

            >

            <TextView
                android:text="@string/temaBlack"
                style="@style/insideButtonSettings"

                />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitch"
                style="@style/MySwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  />

        </LinearLayout>


        <!-- Кнопка Поделиться приложением-->
               <LinearLayout
                   android:id="@+id/btn_send"
                   style="@style/buttonSettings"
                   >

                   <TextView
                       android:text="@string/send"
                       style="@style/insideButtonSettings"

                       />


                   <ImageView

                       android:src="@drawable/send"
                       style="@style/imageButtonSettings"/>

               </LinearLayout>

               <!-- Кнопка Написать в поддержку-->

        <LinearLayout
            android:id="@+id/btn_letter"
            style="@style/buttonSettings"
            >

            <TextView
                android:text="@string/support"
                style="@style/insideButtonSettings"

                />



            <ImageView

                android:src="@drawable/support"
                style="@style/imageButtonSettings"
                />
        </LinearLayout>

        <!-- Кнопка Пользовательское соглашение-->

        <LinearLayout
            android:id="@+id/btn_accept"
            style="@style/buttonSettings"
            >

            <TextView
                android:text="@string/accept"
                style="@style/insideButtonSettings"

                />



            <ImageView

                android:src="@drawable/accept"

                style="@style/imageButtonSettings" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>