<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        android:layout_marginLeft="@dimen/dimside"
        android:layout_marginRight="@dimen/dimside"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sizeTopTextPlay"
        android:paddingBottom="@dimen/sizeBotTextPlay"

        android:layout_gravity="start"
        android:text="@string/playlist"
        android:textSize="@dimen/textSizePlay"

        android:textColor="@color/tint"
        android:fontWeight="@dimen/fontWeight"
          />


        </FrameLayout>


        <!-- Далее зона кнопок -->

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background"

            android:layout_marginTop="@dimen/dimtopboxbutton"
            android:layout_marginBottom="@dimen/dimbottomboxbutton"
            >
            <!-- Кнопка Поиск -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            app:backgroundTint="@color/tint"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="5dp"
            app:iconTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:fontWeight="@dimen/fontWeight"
            android:textAllCaps="false"/>
        </FrameLayout>

            <!-- Кнопка Медиатека-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/dimsidebutton"
            android:layout_marginTop="@dimen/dimsidebutton">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lib"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                app:backgroundTint="@color/tint"
                app:cornerRadius="@dimen/radius"
                app:icon="@drawable/lib"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconTint="@color/white"
                android:text="@string/media"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:fontWeight="@dimen/fontWeight"
                android:textAllCaps="false"/>
        </FrameLayout>

            <!-- Кнопка Настройки-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

           >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                app:backgroundTint="@color/tint"
                app:cornerRadius="@dimen/radius"
                app:icon="@drawable/settings"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconTint="@color/white"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:fontWeight="@dimen/fontWeight"
                android:textAllCaps="false"/>
        </FrameLayout>

    </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>